--- a/src/index.css
+++ b/src/index.css
@@ -4,14 +4,14 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(207, 203, 203);
+  background-color: rgb(197, 185, 185);
   text-decoration: none;
   text-decoration-color:aqua  ;
 }
 
 .boton {
   color: white;
-  background-color: rgb(197, 182, 188);
+  background-color: rgb(163, 149, 155);
   border: none;
   border-radius: 5px;
   padding: 10px 20px;
@@ -24,7 +24,7 @@ body {
 
 
 
-.productContainer{
+/* .productContainer{
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -36,19 +36,32 @@ body {
   padding: 30px;
   margin-top: 2rem;
   margin-bottom: 2rem;
-}
+} */
 
 .hola{
   background-color: rgb(233, 223, 223);
-  box-shadow: 30px;
+  box-shadow: 10px;
   border-radius:  5px;
   color: rgb(0, 0, 0);
-  /* box-shadow: 5px 5px 5px rgb(141, 133, 133); */
+  display: flex;
+  /* flex-direction: row; */
+  /* justify-content: space-around; */
+  /* align-items: center; */
+  flex-wrap: wrap;
+  margin: 0 auto;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+
+  
+ 
 }
 
 .navbar {
   background-color: rgb(234, 232, 229);
-  text-decoration: none;
+  
   text-decoration-color:rgb(136, 55, 55)  ;
   text-decoration-line: none;
 
@@ -75,3 +88,23 @@ body {
 }
 
 
+.probando{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background-color: blue;
+}
+
+.anda{
+  color: rgb(0, 0, 0);
+  text-decoration-line: none;
+  
+}
+
+.anda:hover{
+  color: rgb(203, 147, 168);
+  transition: color 0.3s ease-in-out;
+  text-decoration: none;
+  text-decoration-line: none;
+}
